--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -19,12 +19,12 @@
             <h1>*Ndewo*Wilkommen*Bonjour*Welcome*</h1>
             <div>
                 <p>
-                    Here at <span class="green-heading cursive-heading">Afrik Kitchen</span>, we speak the language of
+                    Here @ <span class="green-heading cursive-heading">Afrik Kitchen</span>, we speak the language of
                     food. All our food ingredients are
-                    orgnic, that i can assure you.They are organically made or prepard with touch of proffessionlism.
-                    If your are seeking where to relax, after a hectic work of the day, or you want to have business or
-                    familiy lunch? or where you would like a home made dinner with friends, or you are Dating out? Here
-                    @Afrik Kitchen is the right restaurant for You as well as for every occasion.
+                    orgnic, that I can assure you.They are organically made and  prepard with touch of professionalism.
+                    If your are seeking where to relax after hectic work of the day, or you want to have business or
+                    familiy lunch? or where you would like a home made dinner with friends, or you are Dating out. Here
+                    @Afrik Kitchen is the right restaurant for You as well as  on  every occasion.
                 </p>
             </div>
         </div>
@@ -39,11 +39,11 @@
             <div class="story_text">
                 <h1 class="">Our Story</h1>
                 <div>
-                    <p>Afrik Kitchen is one of best restaurant in Bremen City Germany, Europ
-                        that offer African Dishes and Event booking and organisation
+                    <p>Afrik Kitchen is one of best restaurants in Bremen City Germany, Europ
+                        that offer African Dishes, Event booking and organisation.
                     </p>
                     <p> Our staff are polite ,friendly and equally happy taking your Order and
-                        serving.</p>
+                        serving You.</p>
                     <p> We partner with of Natural fruit Juice and Water industry Just to serve You better
                         Explore the their website;
                         <a class="green-heading" href="https://www.kaylyjuice.co.za/" target="_blank" rel="noopener"
