--- a/food/templates/food/detail.html
+++ b/food/templates/food/detail.html
@@ -30,7 +30,7 @@
         house warming party, churching, graduations party, companies and school parties.
         You can book
         today or make enquiry here</p>
-    <a href="{% url 'home:contact' %}" class="btn btn-success">contact Us</a>
+    <a href="{% url 'contact' %}" class="btn btn-success">contact Us</a>
 </div>
 
 {% endblock %}
