--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -115,7 +115,7 @@
                         house warming party, churching, graduations party, compaies and school parties.
                         You can book
                         today or make enquiry here</p>
-                    <a href="{% url 'home:contact' %}" class="">contact Us</a>
+                    <a href="{% url 'contact' %}" class="">contact Us</a>
 
                 </div>
 
@@ -161,7 +161,4 @@
         </div>
     </div>
 </footer>
-
-
-
 {% endblock %}
