--- a/booking/templates/already_booked.html
+++ b/booking/templates/already_booked.html
@@ -53,7 +53,7 @@
         <h1>Table not avaliable! </h1>
         <p>{{ message }}</p>
         <p>What would you like to do next?</p>
-        <a href="{% url 'home:home' %}">Go Home</a>
+        <a href="{% url 'home:index' %}">Go Home</a>
         <a href="{% url 'booking:TableListView' %}">Book and Manage Table</a>
         
     </div>
