--- a/booking/templates/booking_list.html
+++ b/booking/templates/booking_list.html
@@ -52,7 +52,7 @@
 
                 <div class="delete"><a href="{% url 'booking:delete_booking' booking.id %}"><i
                             class="far fa-2x fa-times-circle"></i> Cancel Booking</a></div>
-                <div class="edit_booking_form"><a href="{% url 'booking:edit_booking' booking.id %}"><i
+                <div class="edit_booking_form"><a href="{% url 'booking:booking_edit' booking.id %}"><i
                             class="far fa-2x fa-edit"></i> Edit Booking</a></div>
 
             </div>
