--- a/templates/404.html
+++ b/templates/404.html
@@ -8,6 +8,6 @@
     <h1>404 Page Not Found</h1>
     <p>The page you have requested cannot be found!</p>
 
-    <a href="{% url 'home' %}" class="btn button-style">Home</a>
+    <a href="{% url 'home:index' %}" class="btn button-style">Home</a>
 </div>
 {% endblock %}
