--- a/templates/500.html
+++ b/templates/500.html
@@ -6,6 +6,6 @@
     <h1>500 Internal Server Error</h1>
     <p>Don't worry, this is us not you!</p>
 
-    <a href="{% url 'home' %}" class="btn button-style">Home</a>
+    <a href="{% url 'home:index' %}" class="btn button-style">Home</a>
 </div>
 {% endblock %}
