--- a/templates/includes/nav.html
+++ b/templates/includes/nav.html
@@ -1,110 +1,70 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
+<!-- Nav menu -->
+<nav class="navbar navbar-expand-lg navbar-dark menu_bg">
+    <div class="container-fluid">
+        <!-- Logo -->
+        <a class="navbar-brand" href="{% url 'home:index' %}">
+           
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
+            aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+            <i class="fa-solid fa-bars"></i>
+        </button>
+        <!-- Nav Items -->
+        <div class="collapse navbar-collapse justify-content-end" id="navbarText">
+            <ul class="navbar-nav text-end mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{% url 'home:index' %}">Home</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Bookings
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        <li><a class="dropdown-item" aria-current="page"
+                                href="{% url 'booking:managebookings' %}">Manage Bookings</a></li>
+                        <li><a class="dropdown-item" aria-current="page" href="{% url 'booking:TableListView' %}">New
+                                Booking</a></li>
+                    </ul>
+                </li>
+                <!-- Show menu drop downs to staff -->
+                {% if user.is_authenticated %}
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle scroll-to-menu" href="#menu" id="staffOptions" role="button"
+                        data-bs-toggle="dropdown" aria-expanded="false">
+                        Menus
+                    </a>
 
-<head>
-    <!-- Your head content here -->
-</head>
+                    <ul class="dropdown-menu" aria-labelledby="staffOptions">
+                        <li><a class="dropdown-item" aria-current="page" href="{% url 'food:food' %}">View
+                                Menus</a></li>
 
-<body>
-    <header>
-        <!-- Nav menu -->
-        <nav class="navbar navbar-expand-lg navbar-dark menu_bg">
-            <div class="container-fluid">
-                <!-- Logo -->
-                <a class="navbar-brand" href="{% url 'home:home' %}">
-                    <img src="{% static 'images/logo_kiche.png' %}" alt="African Kitchen Logo" width="150" height="60">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
-                    aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                    <i class="fa-solid fa-bars"></i>
-                </button>
-                <!-- Nav Items -->
-                <div class="collapse navbar-collapse justify-content-end" id="navbarText">
-                    <ul class="navbar-nav text-end mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{% url 'home:home' %}">Home</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                Bookings
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" aria-current="page"
-                                        href="{% url 'booking:managebookings' %}">Manage Bookings</a></li>
-                                <li><a class="dropdown-item" aria-current="page"
-                                        href="{% url 'booking:TableListView' %}">New Booking</a></li>
-                            </ul>
-                        </li>
-                        <!-- Show menu drop downs to staff -->
-                        {% if user.is_authenticated %}
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle scroll-to-menu" href="#menu" id="staffOptions"
-                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                Menus
-                            </a>
-
-                            <ul class="dropdown-menu" aria-labelledby="staffOptions">
-                                <li><a class="dropdown-item" aria-current="page" href="{% url 'food:food' %}">View
-                                        Menus</a></li>
-
-                                {% if user.is_staff %}
-                                <li><a class="dropdown-item" aria-current="page"
-                                        href="{% url 'food:create_menuitem' %}">Create Menu</a></li>
-                                <li><a class="dropdown-item" aria-current="page"
-                                        href="{% url 'food:manage_menu'  %}">Manage Menu</a></li>
-
-
-                                {% endif %}
-                            </ul>
-                        </li>
-                        {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="{% url 'home:home' %}">Menus</a>
-                        </li>
-                        {% endif %}
-                        {% if user.is_authenticated %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
-                        </li>
-                        {% else %}
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="{% url 'account_login' %}">Login</a>
-                        </li>
+                        {% if user.is_staff %}
+                        <li><a class="dropdown-item" aria-current="page" href="{% url 'food:create_menuitem' %}">Create
+                                Menu</a></li>
+                        <li><a class="dropdown-item" aria-current="page" href="{% url 'food:manage_menu'  %}">Manage
+                                Menu</a></li>
                         {% endif %}
                     </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
-
-    <!-- Your content here -->
-
-    <!-- JavaScript dependencies -->
-    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.slim.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
-
-
-    <script>
-        function scrollToMenu() {
-            var menuSection = document.getElementById("menu");
-            menuSection.scrollIntoView({
-                behavior: "smooth"
-            });
-        }
-
-        var scrollButton = document.querySelector(".scroll-to-menu");
-        scrollButton.addEventListener("click", scrollToMenu);
-    </script>
-
-    <!-- Your custom JavaScript files -->
-    <script src="{% static '/js/script.js' %}"></script>
-    <!-- <script src="{% static '/js/order.js' %}"></script> -->
-</body>
-
-</html>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="{% url 'home:index' %}">Menus</a>
+                </li>
+                {% endif %}
+                {% if user.is_authenticated %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
+                </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+                </li>
+                {% endif %}
+            </ul>
+        </div>
+    </div>
+</nav>
