--- a/templates/base.html
+++ b/templates/base.html
@@ -15,10 +15,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <!-- Import common styles-->
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
+
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/menu_list.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'css/new_table.css' %}">
     <link rel="stylesheet" href="{% static 'css/menu.css' %}">
+    <link rel="stylesheet" href="{% static '/css/booking_list.css' %}">
 
     {% endblock %}
     <!-- Javascript files -->
