--- a/booking/templates/booking/create_booking.html
+++ b/booking/templates/booking/create_booking.html
@@ -1,10 +1,21 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Create a Booking</h2>
-  <form method="POST" action="{% url booking:'create_booking' %}">
+  <!-- <h2>Create a Booking</h2>
+  <form method="POST" action="{% url 'booking:create_booking' %}">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Create Booking</button>
-  </form>
+  </form> -->
+
+
+<!-- create_booking.html -->
+
+    <h1>Create a Booking</h1>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.as_p }}
+        <button type="submit">Book</button>
+    </form>
+
 {% endblock %}
