--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <!-- Import common styles-->
+    <img src="{% static 'images/logo_resturan.png' %}" style="width: 10%;" alt="My Logo">
+
     <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -83,15 +85,6 @@
 
     <!-- Footer -->
     {% include 'includes/footer.html' %}
-
-    <script>
-        setTimeout(function() {
-            let message = document.getElementById("msg");
-            let alert = new bootstrap.Alert(message);
-            alert.close();
-        }, 3000);
-    </script>
-    
 
 
 </body>
