--- a/booking/templates/booking_list.html
+++ b/booking/templates/booking_list.html
@@ -12,8 +12,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" type="text/css" href="{% static 'css/booking_list.css' %}">
     <title>Booking List</title>
     <script src="https://kit.fontawesome.com/692189991f.js" crossorigin="anonymous"></script>
+
    
 </head>
 <body>
