--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -5,6 +5,8 @@
 {% block content %}
 
 <link rel="stylesheet" href="{% static 'css/style.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+
 
 <main>
 
