--- a/templates/base.html
+++ b/templates/base.html
@@ -24,6 +24,14 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/new_table.css' %}">
     <link rel="stylesheet" href="{% static 'css/menu.css' %}">
     <link rel="stylesheet" href="{% static '/css/booking_list.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/menu.css' %}">
+    <link rel="stylesheet" href="{% static 'css/menu_item.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+
+
+    
+
 
     {% endblock %}
     <!-- Javascript files -->
