--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
     <!-- Import common styles-->
     <img src="{% static 'images/logo_resturan.png' %}" style="width: 10%;" alt="My Logo">
 
-    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
+    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/menu_list.css' %}">
