--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-
+<link rel="icon"  href="{% static 'images/favicon.ico' %}" style="width: 5px;">
 <main>
 
     <div class="container-wrapper">
