--- a/templates/base.html
+++ b/templates/base.html
@@ -1,23 +1,22 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <title>African Kitchen</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'favicon.ico' %}">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="steak, restaurant, food,  Breakfast, Lunch, dinner, sides, drinks, Event, Table, Booking">
-    <meta name="description" content="African  Restaurant in Bremen, Germany Europ">
-    {% load static %}
-    {% load static %}
+    <meta name="keywords" content="steak, restaurant, food, Breakfast, Lunch, dinner, sides, drinks, Event, Table, Booking">
+    <meta name="description" content="African Restaurant in Bremen, Germany Europ">
     {% block css %}
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.3/css/bootstrap.min.css" integrity="sha512-GQGU0fMMi238uA+a/bdWJfpUGKUkBdgfFdgBm72SUQ6BeyWjoY/ton0tEjH+OSH9iP4Dfh+7HM0I9f5eR0L/4w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     
     <!-- Import common styles-->
     <img src="{% static 'images/logo_resturan.png' %}" style="width: 10%;" alt="My Logo">
-
-    <link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
 
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/menu_list.css' %}">
